--- a/IBang/ClientApp/src/app/login/login.component.html
+++ b/IBang/ClientApp/src/app/login/login.component.html
@@ -2,18 +2,19 @@
   <div class="jb-container">
     <h2>Login</h2>
 
-    <form class="jb-form" (ngSubmit)="onSubmit()">
+    <form class="jb-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="form-control">
+        <input type="text" formControlName="username" class="form-control">
       </div>
       <div class="form-group">
-        <label for="username">Password</label>
-        <input type="text" class="form-control">
+        <label for="password">Password</label>
+        <input type="text" formControlName="password" class="form-control">
       </div>
-        <div class="form-group">
+      <div class="form-group">
         <button class="btn btn-primary">Login</button>
       </div>
+      <div *ngIf="error" class="error">Usuario y contraseña no coincide</div>
     </form>
   </div>
 </div>
